Header path has been changed.

--- a/configure.ac
+++ b/configure.ac
@@ -13,12 +13,15 @@ LT_INIT
 # Checks for programs.
 AC_PROG_CXX
 AC_PROG_CC
+AM_PROG_LIBTOOL
 
 # Checks for libraries.
 # FIXME: Replace `main' with a function in `-lfl':
 AC_CHECK_LIB([fl], [main])
 
 # Checks for header files.
+AC_CHECK_HEADERS([lua5.1/lua.h],,[AC_MSG_ERROR(
+		  [Couldn't find lua.h...Install liblua5.1-0-dev])])
 
 # Checks for typedefs, structures, and compiler characteristics.
 
