--- a/libnua/Makefile.am
+++ b/libnua/Makefile.am
@@ -1,4 +1,5 @@
-lib_LTLIBRARIES=libnua.la
+lib_lua_5.1_LTLIBRARIES=libnua.la
+lib_lua_5.1dir=$(prefix)/lib/lua/5.1
 libnua_la_SOURCES=nua.cc
 AM_CPPFLAGS=-I../include
 AM_LDFLAGS=-release 0.1
