matrix template/running in lua(loading success)

--- a/libcnua/Makefile.am
+++ b/libcnua/Makefile.am
@@ -1,7 +1,8 @@
 lib_LTLIBRARIES=libcnua.la
 libcnua_la_SOURCES=cnua.cc
 includedir=$(prefix)/include/nua
-include_HEADERS=../include/nua/nua.h
+include_HEADERS=../include/nua/nua.h \
+		../include/nua/nuamatrix.h
 EXTRA_DIST=cnua.cc
 AM_CPPFLAGS=-I../include
 AM_LDFLAGS=-release 0.1
