--- a/libcnua/Makefile.in
+++ b/libcnua/Makefile.in
@@ -217,7 +217,9 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 lib_LTLIBRARIES = libcnua.la
 libcnua_la_SOURCES = cnua.cc
-include_HEADERS = ../include/nua/nua.h
+include_HEADERS = ../include/nua/nua.h \
+		../include/nua/nuamatrix.h
+
 EXTRA_DIST = cnua.cc
 AM_CPPFLAGS = -I../include
 AM_LDFLAGS = -release 0.1
