elementary get/set

--- a/libcnua/Makefile.am
+++ b/libcnua/Makefile.am
@@ -1,8 +1,9 @@
 lib_LTLIBRARIES=libcnua.la
 libcnua_la_SOURCES=cnua.cc
-includedir=$(prefix)/include/nua
-include_HEADERS=../include/nua/nua.h \
-		../include/nua/nuamatrix.h
+includedir=$(prefix)/include/nuac
+include_HEADERS=../include/nuac/nuac.h \
+		../include/nuac/nuac_matrix.h \
+		../include/nuac/nuac_vector.h
 EXTRA_DIST=cnua.cc
 AM_CPPFLAGS=-I../include
 AM_LDFLAGS=-release 0.1
