--- a/libcnua/Makefile.in
+++ b/libcnua/Makefile.in
@@ -193,7 +193,7 @@ host_cpu = @host_cpu@
 host_os = @host_os@
 host_vendor = @host_vendor@
 htmldir = @htmldir@
-includedir = $(prefix)/include/nua
+includedir = $(prefix)/include/nuac
 infodir = @infodir@
 install_sh = @install_sh@
 libdir = @libdir@
@@ -217,8 +217,9 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 lib_LTLIBRARIES = libcnua.la
 libcnua_la_SOURCES = cnua.cc
-include_HEADERS = ../include/nua/nua.h \
-		../include/nua/nuamatrix.h
+include_HEADERS = ../include/nuac/nuac.h \
+		../include/nuac/nuac_matrix.h \
+		../include/nuac/nuac_vector.h
 
 EXTRA_DIST = cnua.cc
 AM_CPPFLAGS = -I../include
