Matrix inversion by gauss-jordan elimination

--- a/libcnua/Makefile.am
+++ b/libcnua/Makefile.am
@@ -3,7 +3,8 @@ libcnua_la_SOURCES=cnua.cc
 includedir=$(prefix)/include/nuac
 include_HEADERS=../include/nuac/nuac.h \
 		../include/nuac/nuac_matrix.h \
-		../include/nuac/nuac_vector.h
+		../include/nuac/nuac_vector.h \
+		../include/nuac/nuac_linear_algebra.h
 EXTRA_DIST=cnua.cc
 AM_CPPFLAGS=-I../include
 AM_LDFLAGS=-release 0.1
