--- a/libcnua/Makefile.in
+++ b/libcnua/Makefile.in
@@ -219,7 +219,8 @@ lib_LTLIBRARIES = libcnua.la
 libcnua_la_SOURCES = cnua.cc
 include_HEADERS = ../include/nuac/nuac.h \
 		../include/nuac/nuac_matrix.h \
-		../include/nuac/nuac_vector.h
+		../include/nuac/nuac_vector.h \
+		../include/nuac/nuac_linear_algebra.h
 
 EXTRA_DIST = cnua.cc
 AM_CPPFLAGS = -I../include
