--- a/libcnua/Makefile.in
+++ b/libcnua/Makefile.in
@@ -220,7 +220,8 @@ libcnua_la_SOURCES = cnua.cc
 include_HEADERS = ../include/nuac/nuac.h \
 		../include/nuac/nuac_matrix.h \
 		../include/nuac/nuac_vector.h \
-		../include/nuac/nuac_linear_algebra.h
+		../include/nuac/nuac_linear_algebra.h \
+		../include/nuac/nuac_determinant.h
 
 EXTRA_DIST = cnua.cc
 AM_CPPFLAGS = -I../include
