Installing the example scripts

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,3 @@
-SUBDIRS = libnua libcnua
+SUBDIRS = libnua libcnua examples
 MAINTAINERCLEANFILES = aclocal.m4 config.h.in configure Makefile.in 
 ACLOCAL_AMFLAGS = -I m4
