--- a/libnua/Makefile.am
+++ b/libnua/Makefile.am
@@ -1,7 +1,7 @@
 lib_lua_5.1_LTLIBRARIES=libnua.la
 lib_lua_5.1dir=$(prefix)/lib/lua/5.1
-libnua_la_SOURCES=nua.cc nua_matrix.cc nua_vector.cc
+libnua_la_SOURCES=nua.cc nua_matrix.cc nua_vector.cc nua_complex.cc
 AM_CPPFLAGS=-I. -I../include
 AM_LDFLAGS=-release 0.1
 libnua_la_LIBADD=-lfl
-EXTRA_DIST=nua_matrix.h nua_vector.h
+EXTRA_DIST=nua_matrix.h nua_vector.h nua_complex.h
