--- a/libnua/Makefile.in
+++ b/libnua/Makefile.in
@@ -74,7 +74,8 @@ am__uninstall_files_from_dir = { \
 am__installdirs = "$(DESTDIR)$(lib_lua_5.1dir)"
 LTLIBRARIES = $(lib_lua_5.1_LTLIBRARIES)
 libnua_la_DEPENDENCIES =
-am_libnua_la_OBJECTS = nua.lo nua_matrix.lo nua_vector.lo
+am_libnua_la_OBJECTS = nua.lo nua_matrix.lo nua_vector.lo \
+	nua_complex.lo
 libnua_la_OBJECTS = $(am_libnua_la_OBJECTS)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
@@ -214,11 +215,11 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 lib_lua_5.1_LTLIBRARIES = libnua.la
 lib_lua_5.1dir = $(prefix)/lib/lua/5.1
-libnua_la_SOURCES = nua.cc nua_matrix.cc nua_vector.cc
+libnua_la_SOURCES = nua.cc nua_matrix.cc nua_vector.cc nua_complex.cc
 AM_CPPFLAGS = -I. -I../include
 AM_LDFLAGS = -release 0.1
 libnua_la_LIBADD = -lfl
-EXTRA_DIST = nua_matrix.h nua_vector.h
+EXTRA_DIST = nua_matrix.h nua_vector.h nua_complex.h
 all: all-am
 
 .SUFFIXES:
@@ -294,6 +295,7 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/nua.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/nua_complex.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/nua_matrix.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/nua_vector.Plo@am__quote@
 
